--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,9 +64,12 @@ jobs:
           fi
         shell: bash
 
-      - name: Comando - Atualizar README.md com a badge
-        run: |
-          echo sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+      - name: Set badge url for Build
+        run: echo "BADGE_URL_Build=BADGE_URL_Build" >> $GITHUB_ENV
+
+      # - name: Comando - Atualizar README.md com a badge
+      #   run: |
+      #     echo sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
       
       # - name: Run - Atualizar README.md com a badge
       #   run: |
@@ -86,6 +89,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+
+    - name: Use Variable RUN ID
+      run: echo $PIPELINE_EXECUTION_ID
+
+    - name: Use Variable Build Badge URL
+      run: echo $BADGE_URL_Build
+    
     - uses: actions/checkout@v2
     - name: Set up JDK 8
       uses: actions/setup-java@v2
@@ -122,7 +132,6 @@ jobs:
           git config --global user.email "${{ secrets.USER_NAME }}"
           git config --global credential.helper store
           echo "https://github.com:${{ secrets.ACCESS_TOKEN }}@github.com" >> ~/.git-credentials
-
 
     - name: Gerar URL da badge
       run: |
