--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,14 +55,14 @@ jobs:
       - name: Gerar URL da badge
         run: |
           if [[ "${{ job.status }}" == "success" ]]; then
-            echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=green" >> $GITHUB_ENV
+            echo "BADGE_URL=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=green" >> $GITHUB_ENV
           else
-            echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=red" >> $GITHUB_ENV
+            echo "BADGE_URL=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=red" >> $GITHUB_ENV
           fi
         shell: bash
 
       - name: Set badge url for Build
-        run: echo "BADGE_URL_Build=$BADGE_URL_Build" >> $GITHUB_ENV
+        run: echo "BADGE_URL_Build=$BADGE_URL" >> $GITHUB_ENV
 
       # - name: Comando - Atualizar README.md com a badge
       #   run: |
