--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,6 +64,7 @@ jobs:
       - name: Set badge url for Build
         run: echo "BADGE_URL_Build=$BADGE_URL" >> $GITHUB_ENV
 
+
       # - name: Comando - Atualizar README.md com a badge
       #   run: |
       #     echo sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
@@ -86,14 +87,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    - uses: actions/checkout@v2
 
     - name: Setar variável PIPELINE_EXECUTION_ID
       run: echo "PIPELINE_EXECUTION_ID=${{ github.run_id }}" >> $GITHUB_ENV
 
     - name: Use Variable Build Badge URL
       run: echo $BADGE_URL_Build
-    
-    - uses: actions/checkout@v2
+
     - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
@@ -123,10 +124,10 @@ jobs:
       run: cat target/surefire-reports/*.txt    
     
     - name: Delete Test Results Artifact
-      uses: actions/checkout@v2
+      uses: actions/delete-artifact@v2
       with:
-        uses: actions/delete-artifact@v2
         name: test-results
+    
 
     # GITHUB STUFF
     - name: Configurar usuário Git
@@ -152,7 +153,8 @@ jobs:
     - name: Run - Badge Build and Analyse
       run: |
         sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
-    
+      shell: /usr/bin/bash -e {0}
+
     - name: Run - Badge Unit Tests
       run: |
         sed -i "7s~.*~[![Status do Job]($BADGE_URL_Unit)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
