--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -1,22 +1,9 @@
 # GIT STUFF
 
-name: Github Settings
+name: Git Settings
 
 on:
-  push:
-    branches:
-      - master
-      - release-candidate
-      - unit-tests
-    paths-ignore:
-      - '**/readme.md'
-  pull_request:
-    branches:
-      - master
-      - release-candidate
-      - unit-tests
-    paths-ignore:
-      - '**/readme.md'
+  workflow_dispatch:
 
 jobs:
     git-set-commit:
@@ -24,17 +11,19 @@ jobs:
         runs-on: ubuntu-latest
         
         steps:
-            - uses: actions/checkout@v3
-            - name: Configurar usuário Git
-              run: |
-                git config --global user.name "GitHub Actions"
-                git config --global user.email "${{ secrets.USER_NAME }}"
-                git config --global credential.helper store
-                echo "https://github.com:${{ secrets.ACCESS_TOKEN }}@github.com" >> ~/.git-credentials
+          - name: Checkout do repositório
+            uses: actions/checkout@v2
+          
+          - name: Configurar usuário Git
+            run: |
+              git config --global user.name "GitHub Actions"
+              git config --global user.email "${{ secrets.USER_NAME }}"
+              git config --global credential.helper store
+              echo "https://github.com:${{ secrets.ACCESS_TOKEN }}@github.com" >> ~/.git-credentials
 
-            - name: Commit e push das alteracoes
-              run: |
-                git add .
-                git status
-                git commit -v -m "Add badge to readme"
-                git push -v
+          - name: Commit e push das alteracoes
+            run: |
+              git add .
+              git status
+              git commit -v -m "Add badge to readme"
+              git push -v
