Change yml name

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -154,7 +154,7 @@ jobs:
         sed -i "7s~.*~[![Status do Job]($BADGE_URL_Unit)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
 
     - name: Executar job - Git
-      uses: ./git.yml
+      uses: ./.github/workflows/git-commit.yml
     
     #endregion
 
