--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -157,7 +157,9 @@ jobs:
 
 
   git-commit:
-    uses: ./.github/workflows/git-commit.yml
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ./.github/workflows/git-commit.yml
 
 
   # deploy:
