--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -158,6 +158,7 @@ jobs:
 
   git-commit:
     runs-on: ubuntu-latest
+    needs: unit-tests
     steps:
       - uses: ./.github/workflows/git-commit.yml
 
