--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -65,23 +65,6 @@ jobs:
         run: echo "BADGE_URL_Build=$BADGE_URL" >> $GITHUB_ENV
 
 
-      # - name: Comando - Atualizar README.md com a badge
-      #   run: |
-      #     echo sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
-      
-      # - name: Run - Atualizar README.md com a badge
-      #   run: |
-      #     sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
-
-      # - name: Commit e push das alterações
-      #   run: |
-      #     git add .
-      #     git status
-      #     git commit -v -m "Add badge to readme"
-      #     git push -v
-
-
-
   unit-tests:
     name: Unit Tests Run
     runs-on: ubuntu-latest
@@ -122,7 +105,73 @@ jobs:
       with:
         name: test-results
 
-    
+
+  deploy:
+    name: Deploy to Plataform
+    if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request'
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    steps:
+    - name: Deploy to Plataform
+      run: echo "Azure for students not working :("
+      # uses: SamKirkland/FTP-Deploy-Action@3.0.0
+      # with:
+      #   server: files.000webhost.com
+      #   ftp-server: files.000webhost.com
+      #   username: ${{ secrets.FTP_USERNAME }}
+      #   ftp-username: ${{ secrets.FTP_USERNAME }}
+      #   password: ${{ secrets.FTP_PASSWORD }}
+      #   ftp-password: ${{ secrets.FTP_PASSWORD }}
+      #   server-dir: /public_html/
+      #   local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
+
+
+  interface-tests:
+    name: Cypress e2e Tests
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - uses: actions/checkout@v2
+      - name: Configurar ambiente
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Instalar dependencias
+        run: npm install
+        working-directory: tests
+      - name: Executar Cypress
+        run: npm run cy:run
+        working-directory: tests
+  
+  
+  jmeter-tests:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install JMeter
+        run: |
+          sudo apt-get update
+          sudo apt-get install default-jre -y
+          wget https://mirror.navercorp.com/apache//jmeter/binaries/apache-jmeter-5.4.3.tgz
+          tar -xzf apache-jmeter-5.4.3.tgz
+          rm apache-jmeter-5.4.3.tgz
+          mkdir -p apache-jmeter-5.4.3/lib
+          cp lib/jmeter-plugins-cmn-jmeter-0.4.jar apache-jmeter-5.4.3/lib
+      
+      - name: Run Jmeter Tests
+        run: |
+          ./apache-jmeter-5.4.3/bin/jmeter -n -t testplan.jmx -l testreport.jtl
+
+
+  create-badges:
+    name: Create Status Badges
+    runs-on: ubuntu-latest
+    needs: [build, unit-tests, deploy, interface-tests, jmeter-tests]
+    steps:
+    - uses: actions/checkout@v2
+
     #region BADGE STUFF
     - name: Setar variável PIPELINE_EXECUTION_ID
       run: echo "PIPELINE_EXECUTION_ID=${{ github.run_id }}" >> $GITHUB_ENV
@@ -132,91 +181,77 @@ jobs:
         if [[ "${{ needs.build.result }}" == "success" ]]; then
           echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=green" >> $GITHUB_ENV
         else
-          echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=red" >> $GITHUB_ENV
+          echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=failure\&color=red" >> $GITHUB_ENV
         fi
       shell: bash
 
     - name: Gerar URL da badge UNIT
       run: |
-        if [[ "${{ job.status }}" == "success" ]]; then
+        if [[ "${{ needs.unit-tests.result }}" == "success" ]]; then
           echo "BADGE_URL_Unit=https://img.shields.io/static/v1?label=Unit-Tests\&message=success\&color=green" >> $GITHUB_ENV
         else
-          echo "BADGE_URL_Unit=https://img.shields.io/static/v1?label=Unit-Tests\&message=success\&color=red" >> $GITHUB_ENV
+          echo "BADGE_URL_Unit=https://img.shields.io/static/v1?label=Unit-Tests\&message=failure\&color=red" >> $GITHUB_ENV
         fi
       shell: bash
 
-    - name: Run - Badge Build and Analyse
+    - name: Gerar URL da badge DEPLOY
+      run: |
+        if [[ "${{ needs.deploy.result }}" == "success" ]]; then
+          echo "BADGE_URL_Deploy=https://img.shields.io/static/v1?label=Deploy\&message=success\&color=green" >> $GITHUB_ENV
+        elif [[ "${{ needs.deploy.result }}" == "failure" ]]; then
+          echo "BADGE_URL_Deploy=https://img.shields.io/static/v1?label=Deploy\&message=failure\&color=red" >> $GITHUB_ENV
+        else
+          echo "BADGE_URL_Deploy=https://img.shields.io/static/v1?label=Cypress-Tests\&message=not-run\&color=%23808080" >> $GITHUB_ENV
+        fi
+      shell: bash
+
+    - name: Gerar URL da badge CYPRESS
+      run: |
+        if [[ "${{ needs.interface-tests.result }}" == "success" ]]; then
+          echo "BADGE_URL_Cypress=https://img.shields.io/static/v1?label=Cypress-Tests\&message=success\&color=green" >> $GITHUB_ENV
+        elif [[ "${{ needs.interface-tests.result }}" == "failure" ]]; then
+          echo "BADGE_URL_Cypress=https://img.shields.io/static/v1?label=Cypress-Tests\&message=failure\&color=red" >> $GITHUB_ENV
+        else
+          echo "BADGE_URL_Cypress=https://img.shields.io/static/v1?label=Cypress-Tests\&message=not-run\&color=%23808080" >> $GITHUB_ENV
+        fi
+      shell: bash
+  
+    - name: Gerar URL da badge JMETER
+      run: |
+        if [[ "${{ needs.jmeter-tests.results }}" == "success" ]]; then
+          echo "BADGE_URL_Jmeter=https://img.shields.io/static/v1?label=Jmeter-Tests\&message=success\&color=green" >> $GITHUB_ENV
+        elif [[ "${{ needs.jmeter-tests.result }}" == "failure" ]]; then
+          echo "BADGE_URL_Jmeter=https://img.shields.io/static/v1?label=Jmeter-Tests\&message=failure\&color=red" >> $GITHUB_ENV
+        else
+          echo "BADGE_URL_Jmeter=https://img.shields.io/static/v1?label=Jmeter-Tests\&message=not-run\&color=%23808080" >> $GITHUB_ENV
+        fi
+      shell: bash
+
+
+    - name: Set Badges on Readme
       run: |
         sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
-
-    - name: Run - Badge Unit Tests
-      run: |
         sed -i "7s~.*~[![Status do Job]($BADGE_URL_Unit)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+        sed -i "9s~.*~[![Status do Job]($BADGE_URL_Deploy)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+        sed -i "11s~.*~[![Status do Job]($BADGE_URL_Cypress)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+        sed -i "13s~.*~[![Status do Job]($BADGE_URL_Jmeter)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
     
     #endregion
 
+    #region GIT STUFF
 
-  git-commit:
-    runs-on: ubuntu-latest
-    needs: unit-tests
-    steps:
-      - uses: ./.github/workflows/git-commit.yml
+    - name: Configurar usuario Git
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "${{ secrets.USER_NAME }}"
+        git config --global credential.helper store
+        echo "https://github.com:${{ secrets.ACCESS_TOKEN }}@github.com" >> ~/.git-credentials
 
+    - name: Commit e push
+      run: |
+        git add .
+        git status
+        git commit -v -m "Add badges to readme"
+        git push -v
 
-  # deploy:
-  #   name: Deploy to Plataform
-  #   if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request'
-  #   runs-on: ubuntu-latest
-  #   needs: unit-tests
-  #   steps:
-  #   - name: Deploy to Plataform
-  #     run: echo "Azure for students not working :("
-  #     # uses: SamKirkland/FTP-Deploy-Action@3.0.0
-  #     # with:
-  #     #   server: files.000webhost.com
-  #     #   ftp-server: files.000webhost.com
-  #     #   username: ${{ secrets.FTP_USERNAME }}
-  #     #   ftp-username: ${{ secrets.FTP_USERNAME }}
-  #     #   password: ${{ secrets.FTP_PASSWORD }}
-  #     #   ftp-password: ${{ secrets.FTP_PASSWORD }}
-  #     #   server-dir: /public_html/
-  #     #   local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
-
-
-  # interface-tests:
-  #   name: Cypress e2e Tests
-  #   runs-on: ubuntu-latest
-  #   needs: deploy
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Configurar ambiente
-  #       uses: actions/setup-node@v2
-  #       with:
-  #         node-version: '14'
-
-  #     - name: Instalar dependencias
-  #       run: npm install
-  #       working-directory: tests
-  #     - name: Executar Cypress
-  #       run: npm run cy:run
-  #       working-directory: tests
-  
-  
-  # jmeter-tests:
-  #   runs-on: ubuntu-latest
-  #   needs: deploy
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Install JMeter
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install default-jre -y
-  #         wget https://mirror.navercorp.com/apache//jmeter/binaries/apache-jmeter-5.4.3.tgz
-  #         tar -xzf apache-jmeter-5.4.3.tgz
-  #         rm apache-jmeter-5.4.3.tgz
-  #         mkdir -p apache-jmeter-5.4.3/lib
-  #         cp lib/jmeter-plugins-cmn-jmeter-0.4.jar apache-jmeter-5.4.3/lib
-      
-  #     - name: Run Jmeter Tests
-  #       run: |
-  #         ./apache-jmeter-5.4.3/bin/jmeter -n -t testplan.jmx -l testreport.jtl
+    #endregion
