--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -212,6 +212,11 @@ jobs:
 
     - name: Commit e push
       run: |
+        branch_name=$(echo "${{ github.ref }}" | sed 's/refs\/pull\///' | sed 's/\/merge//')
+        echo "Branch de origem: $branch_name"
+        
+        git checkout "$branch_name"
+      
         git add .
         git status
         git commit -v -m "Add badges to readme"
@@ -219,17 +224,35 @@ jobs:
 
     #endregion
 
-  create-badges-deploy-tests:
+  create-badges-all:
       name: Create Status Badges
       runs-on: ubuntu-latest
-      needs: [deploy, interface-tests, jmeter-tests]
+      needs: [build, unit-tests, deploy, interface-tests, jmeter-tests]
       steps:
       - uses: actions/checkout@v2
   
       #region BADGE STUFF
       - name: Setar variável PIPELINE_EXECUTION_ID
         run: echo "PIPELINE_EXECUTION_ID=${{ github.run_id }}" >> $GITHUB_ENV
+
+      - name: Gerar URL da badge BUILD
+        run: |
+          if [[ "${{ needs.build.result }}" == "success" ]]; then
+            echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=success\&color=green" >> $GITHUB_ENV
+          else
+            echo "BADGE_URL_Build=https://img.shields.io/static/v1?label=Build-and-Analyze\&message=failure\&color=red" >> $GITHUB_ENV
+          fi
+        shell: bash
   
+      - name: Gerar URL da badge UNIT
+        run: |
+          if [[ "${{ needs.unit-tests.result }}" == "success" ]]; then
+            echo "BADGE_URL_Unit=https://img.shields.io/static/v1?label=Unit-Tests\&message=success\&color=green" >> $GITHUB_ENV
+          else
+            echo "BADGE_URL_Unit=https://img.shields.io/static/v1?label=Unit-Tests\&message=failure\&color=red" >> $GITHUB_ENV
+          fi
+        shell: bash
+
       - name: Gerar URL da badge DEPLOY
         run: |
           if [[ "${{ needs.deploy.result }}" == "success" ]]; then
@@ -266,6 +289,9 @@ jobs:
   
       - name: Set Badges on Readme
         run: |
+          sed -i "5s~.*~[![Status do Job]($BADGE_URL_Build)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+          sed -i "7s~.*~[![Status do Job]($BADGE_URL_Unit)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
+          sed -i "7s~.*~[![Status do Job]($BADGE_URL_Unit)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
           sed -i "9s~.*~[![Status do Job]($BADGE_URL_Deploy)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
           sed -i "11s~.*~[![Status do Job]($BADGE_URL_Cypress)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
           sed -i "13s~.*~[![Status do Job]($BADGE_URL_Jmeter)](https://github.com/lauraFCa/manutencaoSoft/actions/runs/$PIPELINE_EXECUTION_ID)~" readme.md
