--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -167,6 +167,7 @@ jobs:
 
   create-badges-build-unit:
     name: Create Status Badges
+    if: github.ref != 'refs/heads/master' && github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     needs: [build, unit-tests]
     steps:
@@ -215,7 +216,8 @@ jobs:
         branch_name=$(echo "${{ github.ref }}" | sed 's/refs\/pull\///' | sed 's/\/merge//')
         echo "Branch de origem: $branch_name"
         
-        git checkout "$branch_name"
+        git fetch origin "+refs/pull/$branch_name/merge:"
+        git checkout "FETCH_HEAD"
       
         git add .
         git status
