--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -222,7 +222,7 @@ jobs:
         git add .
         git status
         git commit -v -m "Add badges to readme"
-        git push -v origin HEAD:$branch_name
+        git push -v origin $branch_name
 
     #endregion
 
