--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -214,6 +214,7 @@ jobs:
         echo ${{ github.event.pull_request.number }}
         echo ${{ github.repository }}
         echo "Branch de origem: $branch_name"
+        echo "git push -v origin HEAD:$branch_name"
 
     - name: Commit e push
       run: |
@@ -222,7 +223,7 @@ jobs:
         git add .
         git status
         git commit -v -m "Add badges to readme"
-        git push -v origin $branch_name
+        git push -v origin HEAD:$branch_name
 
     #endregion
 
