--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -159,7 +159,25 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, unit-tests]
     steps:
+    - name: Instalar jq
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y jq
+
+    - name: Obter branch de origem
+      run: |
+        pr_number=${{ github.event.pull_request.number }}
+        branch_name=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/${pr_number}" \
+          | jq -r '.head.ref')
+        echo ${{ github.event.pull_request.number }}
+        echo ${{ github.repository }}
+        echo "Branch de origem: $branch_name"
+        echo "git push -v origin HEAD:$branch_name"
+
     - uses: actions/checkout@v2
+      with:
+        ref: $branch_name
 
     #region BADGE STUFF
     - name: Setar variável PIPELINE_EXECUTION_ID
@@ -199,31 +217,12 @@ jobs:
         git config --global credential.helper store
         echo "https://github.com:${{ secrets.ACCESS_TOKEN }}@github.com" >> ~/.git-credentials
 
-    - name: Instalar jq
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y jq
-      
-
-    - name: Obter branch de origem
-      run: |
-        pr_number=${{ github.event.pull_request.number }}
-        branch_name=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-          "https://api.github.com/repos/${{ github.repository }}/pulls/${pr_number}" \
-          | jq -r '.head.ref')
-        echo ${{ github.event.pull_request.number }}
-        echo ${{ github.repository }}
-        echo "Branch de origem: $branch_name"
-        echo "git push -v origin HEAD:$branch_name"
-
     - name: Commit e push
       run: |
-        git checkout $branch_name
-      
         git add .
         git status
         git commit -v -m "Add badges to readme"
-        git push -v origin HEAD:$branch_name
+        git push -v
 
     #endregion
 
