--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -165,6 +165,7 @@ jobs:
         sudo apt-get install -y jq
 
     - name: Obter branch de origem
+      id: get-branch-name
       run: |
         pr_number=${{ github.event.pull_request.number }}
         branch_name=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
@@ -175,7 +176,7 @@ jobs:
 
     - uses: actions/checkout@v2
       with:
-        ref: ${{ github.repository }}/$branch_name
+        ref: ${{ github.repository }}/${{ steps.get-branch-name.outputs.branch_name }}"
 
     #region BADGE STUFF
     - name: Setar variável PIPELINE_EXECUTION_ID
