--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,23 +34,23 @@ jobs:
           java-version: 11
           distribution: 'zulu'
       
-      # - name: Cache SonarCloud packages
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: ~/.sonar/cache
-      #     key: ${{ runner.os }}-sonar
-      #     restore-keys: ${{ runner.os }}-sonar
-      # - name: Cache Maven packages
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: ~/.m2
-      #     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-      #     restore-keys: ${{ runner.os }}-m2
-      # - name: Build and analyze
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GIHUB_TOKEN }} 
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=br.cesjf:HotelLucena
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIHUB_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=br.cesjf:HotelLucena
 
 
   unit-tests:
@@ -66,32 +66,32 @@ jobs:
         java-version: 8
         distribution: 'temurin'
 
-    # - name: Cache Maven packages
-    #   uses: actions/cache@v2
-    #   with:
-    #     path: ~/.m2/repository
-    #     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
 
-    # - name: Build with Maven
-    #   run: mvn clean package
+    - name: Build with Maven
+      run: mvn clean package
 
-    # - name: Run Unit Tests
-    #   run: |
-    #     mvn test
+    - name: Run Unit Tests
+      run: |
+        mvn test
 
-    # - name: Publish Test Results
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: test-results
-    #     path: target/surefire-reports
+    - name: Publish Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: target/surefire-reports
     
-    # - name: Display Test Results
-    #   run: cat target/surefire-reports/*.txt    
+    - name: Display Test Results
+      run: cat target/surefire-reports/*.txt    
 
-    # - name: Delete Test Results Artifact
-    #   uses: geekyeggo/delete-artifact@v2
-    #   with:
-    #     name: test-results
+    - name: Delete Test Results Artifact
+      uses: geekyeggo/delete-artifact@v2
+      with:
+        name: test-results
 
 
   deploy:
@@ -172,7 +172,6 @@ jobs:
           "https://api.github.com/repos/${{ github.repository }}/pulls/${pr_number}" \
           | jq -r '.head.ref')
         echo "Branch de origem: $branch_name"
-        echo "::set-output name=branch_name::$branch_name"
         echo "branch_name=$branch_name" >> $GITHUB_ENV
 
     - uses: actions/checkout@v2
