--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -131,8 +131,8 @@ jobs:
       - name: Executar Cypress
         run: npm run cy:run
         working-directory: tests
-  
-  
+
+
   jmeter-tests:
     runs-on: ubuntu-latest
     needs: deploy
@@ -149,8 +149,14 @@ jobs:
           cp lib/jmeter-plugins-cmn-jmeter-0.4.jar apache-jmeter-5.4.3/lib
       
       - name: Run Jmeter Tests
+        id: jmeterRun
         run: |
           ./apache-jmeter-5.4.3/bin/jmeter -n -t testplan.jmx -l testreport.jtl
+
+      - name: Set Job Status
+        run: |
+          echo "${{ job.status }}"
+          echo "${{ job.jmeterRun.outcome }}"
 
 
   create-badges-build-unit:
@@ -233,6 +239,7 @@ jobs:
         git push -v
 
     #endregion
+
 
   create-badges-all:
       name: Create Status Badges
@@ -324,4 +331,3 @@ jobs:
           git push -v
   
       #endregion
-  
