--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -160,7 +160,7 @@ jobs:
 
   create-badges-build-unit:
     name: Create Status Badges
-    if: ${{ always() && github.ref != 'refs/heads/master' && github.event_name == 'pull_request' }}
+    if: ${{ github.ref != 'refs/heads/master' && github.event_name == 'pull_request' && always()}}
 
     runs-on: ubuntu-latest
     needs: [build, unit-tests]
@@ -245,7 +245,7 @@ jobs:
       name: Create Status Badges
       runs-on: ubuntu-latest
       needs: [build, unit-tests, deploy, interface-tests, jmeter-tests]
-      if: ${{ always() }}
+      if: ${{ always() && github.event_name != 'pull_request' }}
       steps:
       - uses: actions/checkout@v2
   
